@@ -1,7 +1,7 @@
 #ifndef E_MOD_MAIN_H
 #define E_MOD_MAIN_H
 
-extern E_Module_Api e_module_api;
+extern E_Module_Api e_modapi;
 
 EAPI void *e_modapi_init     (E_Module *module);
 EAPI int   e_modapi_shutdown (E_Module *module);
